Closed Bug 336312 Opened 18 years ago Closed 18 years ago

scrollbar gets painted slightly funny when scrolling slowly

Categories

(Core :: Graphics, defect)

x86
Windows XP
defect
Not set
trivial

Tracking

()

RESOLVED FIXED

People

(Reporter: wlevine, Assigned: vlad)

References

Details

Attachments

(3 files)

User-Agent:       Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060428 Minefield/3.0a1
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060428 Minefield/3.0a1

If you scroll through a webpage slowly, there is a slightly different pattern in the scrollbar than usual in the parts that have been scrolled through.

Reproducible: Always

Steps to Reproduce:
1. Depress the up or down button on scrollbar.
2.
3.

Actual Results:  
Different parts of the scrollbar look different.

Expected Results:  
All of scrollbar should look the same.

I'll post a screenshot.
Attached image screenshot
WFM with Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060502 Minefield/3.0a1
Any special site?
There are other ways to trigger this, such as having a long or wide page that loads slowly; as the thumb shrinks the scrollbar background is painted wrongly.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Attached file Test case
Yes, it is Classic-only.
*** Bug 342416 has been marked as a duplicate of this bug. ***
When drawing stippled fills in the win32 native theme drawing code, we set the brush origin to the top left of the fill rect.  However, because we're now logically double buffering the entire paint surface area (by use of viewport origin/cairo device offset), we need to take this into account when setting the device brush offset.
Assignee: nobody → vladimir
Status: NEW → ASSIGNED
Attachment #228871 - Flags: review?(pavlov)
Attachment #228871 - Flags: review?(pavlov) → review+
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: