b=336312, scrollbar stipple pattern is offset when scrolling on windows, r=stuart